--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="container">
   <div class="row background-image">
     <div class="col-md-3 col-sm-6 mb-30px">
-      <img src="/Users/christianbaidoo/Desktop/TGIF/image/capitol-icon.jpg" alt="man with magnifying glass">
+      <img src="./image/capitol-icon.jpg" alt="capitol-icon">
     </div>
     <div class="col-md-9 col-sm-6 align-self-center back-image">
       <h1 class="main-header">Transparent Government in Fact</h1>
@@ -33,8 +33,7 @@
   <nav class="navbar navbar-expand-sm  nav-tabs">
 
     <a href="./index.html" class="navbar nav-item nav-link  active ">Home</a>
-    <!-- <a class="nav-link nav-item" href="./senate-data.html">Senate</a>
-    <a class="nav-link nav-item" href="./house-data.html">House</a> -->
+
 
     <div class="dropdown">
 
@@ -149,10 +148,9 @@
     <div class="footer-copyright text-center py-3"> &copy; 2019 Copyright: All Rights Reserved
     </div>
     <div class="social">
-      <a href="#" class="fa fa-facebook"></a>
-      <a href="#" class="fa fa-twitter"></a>
-      <a href="#" class="fa fa-linkedin"></a>
-      <a href="#" class="fa fa-google"></a>
+      <a href="https://www.facebook.com/" target="=_blank" class="fa fa-facebook"></a>
+      <a href="https://twitter.com/" target="=_blank" class="fa fa-twitter"></a>
+      <a href="https://www.linkedin.com/" target="=_blank" class="fa fa-linkedin"></a>
     </div>
   </footer>
 
