--- a/senate-attendance.html
+++ b/senate-attendance.html
@@ -16,7 +16,7 @@
 
     <div class="row ">
         <div class="col-md-3 col-sm-6 mb-30px">
-            <img src="./image/capitol-icon.jpg" alt="man with magnifying glass">
+            <img src="./image/capitol-icon.jpg" alt="capitol-icon">
         </div>
         <div class="col-md-9 col-sm-6 align-self-center pull-left">
             <h1 class="main-header">Transparent Government in Fact</h1>
@@ -66,9 +66,12 @@
         </div>
     </nav>
 
-
     <section class="card">
+        <!-- <div id="loader"></div> -->
+
         <div class="card-body">
+            <div id="loader"></div>
+
 
             <div class="row ">
                 <div class="col-md-6 col-sm-6 mb-30px">
@@ -78,6 +81,7 @@
                         each house. Representatives and senators rarely force the presence of a quorum by demanding
                         quorum calls; thus, in most cases, debates continue even if a majority is not present.
                     </p>
+
 
                     <p>
                         The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator
@@ -90,10 +94,10 @@
                 </div>
 
                 <div class="col-md-6 col-sm-6">
-                    <div class="text-aling-right"></div>
                     <h4>Senate at a glance</h4>
 
-                    <table class="table table-bordered table-striped">
+                    <table class="table table-bordered table-striped table-hover">
+
                         <thead>
                             <tr class="navy-blue">
                                 <th class="column width_1 font-white">Party</th>
@@ -115,7 +119,7 @@
                 <div class="col-md-6 col-sm-6 mb-30px">
                     <h4>Least Engaged (Bottom 10% Attendance)</h4>
 
-                    <table class="table table-bordered table-striped">
+                    <table class="table table-bordered table-striped table-hover">
                         <thead>
                             <tr class="navy-blue">
                                 <th class="column width_1 font-white">Name</th>
@@ -134,9 +138,11 @@
 
 
                 <div class="col-md-6 col-sm-6 mb-30px">
+
                     <h4>Most Engaged (Top 10% Attendance)</h4>
 
-                    <table class="table table-bordered table-striped">
+                    <table class="table table-bordered table-striped table-hover">
+
                         <thead>
                             <tr class="navy-blue">
                                 <th class="column width_1 font-white">Name</th>
@@ -150,14 +156,13 @@
                     </table>
 
 
+
                 </div>
 
 
             </div>
 
         </div>
-        <div id="loader"></div>
-
     </section>
 
     <br>
@@ -171,10 +176,9 @@
         <div class="footer-copyright text-center py-3"> &copy; 2019 Copyright: All Rights Reserved
         </div>
         <div class="social">
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-linkedin"></a>
-            <a href="#" class="fa fa-google"></a>
+            <a href="https://www.facebook.com/" target="=_blank" class="fa fa-facebook"></a>
+            <a href="https://twitter.com/" target="=_blank" class="fa fa-twitter"></a>
+            <a href="https://www.linkedin.com/" target="=_blank" class="fa fa-linkedin"></a>
         </div>
     </footer>
 
