--- a/house-attendance.html
+++ b/house-attendance.html
@@ -17,7 +17,7 @@
 
     <div class="row ">
         <div class="col-md-3 col-sm-6 mb-30px">
-            <img src="./image/capitol-icon.jpg" alt="man with magnifying glass">
+            <img src="./image/capitol-icon.jpg" alt="capitol-icon">
         </div>
         <div class="col-md-9 col-sm-6 align-self-center pull-left">
             <h1 class="main-header">Transparent Government in Fact</h1>
@@ -69,10 +69,16 @@
 
 
     <section class="card">
+
+
         <div class="card-body">
 
             <div class="row ">
+
                 <div class="col-md-6 col-sm-6 mb-30px">
+
+                    <div id="loader"></div>
+
                     <h4>Attendance</h4>
                     <p>
                         The Constitution specifies that a majority of members constitutes a quorum to do business in
@@ -94,7 +100,7 @@
                     <div class="text-aling-right"></div>
                     <h4>House at a glance</h4>
 
-                    <table class="table table-bordered table-striped">
+                    <table class="table table-bordered table-striped table-hover">
                         <thead>
                             <tr class="navy-blue">
                                 <th class="font-white">Party</th>
@@ -116,7 +122,7 @@
                 <div class="col-md-6 col-sm-6 mb-30px">
                     <h4>Least Engaged (Bottom 10% Attendance)</h4>
 
-                    <table class="table table-bordered table-striped">
+                    <table class="table table-bordered table-striped table-hover">
                         <thead>
                             <tr class="navy-blue">
                                 <th class="font-white">Name</th>
@@ -136,7 +142,7 @@
                 <div class="col-md-6 col-sm-6 mb-30px">
                     <h4>Most Engaged (Top 10% Attendance)</h4>
 
-                    <table class="table table-bordered table-striped">
+                    <table class="table table-bordered table-striped table-hover">
                         <thead>
                             <tr class="navy-blue">
                                 <th class="font-white column width _1">Name</th>
@@ -157,7 +163,7 @@
 
         </div>
 
-        <div id="loader"></div>
+        <!-- <div id="loader"></div> -->
 
     </section>
 
@@ -171,10 +177,9 @@
         <div class="footer-copyright text-center py-3"> &copy; 2019 Copyright: All Rights Reserved
         </div>
         <div class="social">
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-linkedin"></a>
-            <a href="#" class="fa fa-google"></a>
+            <a href="https://www.facebook.com/" target="=_blank" class="fa fa-facebook"></a>
+            <a href="https://twitter.com/" target="=_blank" class="fa fa-twitter"></a>
+            <a href="https://www.linkedin.com/" target="=_blank" class="fa fa-linkedin"></a>
         </div>
     </footer>
 
