--- a/senate-data.html
+++ b/senate-data.html
@@ -84,9 +84,6 @@
 
 
 
-    <!-- https://www.linkedin.com/learning/bootstrap-4-essential-training/table-styles-3 -->
-    <!-- table-striped table hover -->
-
     <form class="checkbox">
         <span class="font-italic">Filter by:</span> &ensp;
 
@@ -99,55 +96,42 @@
     </form>
 
 
+    <div class="table-wrapper-scroll-y my-custom-scrollbar">
 
-    <table class="table table-bordered table-striped">
-
-        <tr class="navy-blue">
-            <th class="font-white">Senator</th>
-            <th class="font-white">Party
-            <th class="font-white">
-                State
-                <div>
-                    <select name="Filter by state" id="select-filter">
-                        <option value="all">All</option>
-                    </select>
-                </div>
-            </th>
-            <th class="font-white">Years in Office</th>
-            <th class="font-white">Percentage of Votes</th>
-        </tr>
-        <tbody id="tabledata">
-
-        </tbody>
-    </table>
-    <div id="loader"></div>
-
-    <button type="button" class="btn btn-info" data-target="#top"><a href="#top" class="font-white text-deco"> Back to
-            the top</a>
-    </button>
+        <table class="table table-bordered table-striped table-hover">
 
 
+            <tr>
+                <th class="font-white fixed navy-blue">Senator</th>
+                <th class="font-white fixed navy-blue">Party
+                <th class="font-white fixed navy-blue">
+                    State
+                    <div>
+                        <select name="Filter by state" id="select-filter">
+                            <option value="all">All</option>
+                        </select>
+                    </div>
+                </th>
+                <th class="font-white fixed navy-blue">Years in Office</th>
+                <th class="font-white fixed navy-blue">Percentage of Votes</th>
+            </tr>
+            <tbody id="tabledata">
 
-    <footer class="page-footer font-small">
+            </tbody>
+        </table>
+    </div>
+
+
+    <footer class="page-footer font-small blue">
         <div class="footer-copyright text-center py-3"> &copy; 2019 Copyright: All Rights Reserved
         </div>
         <div class="social">
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-linkedin"></a>
-            <a href="#" class="fa fa-google"></a>
+            <a href="https://www.facebook.com/" target="=_blank" class="fa fa-facebook"></a>
+            <a href="https://twitter.com/" target="=_blank" class="fa fa-twitter"></a>
+            <a href="https://www.linkedin.com/" target="=_blank" class="fa fa-linkedin"></a>
         </div>
     </footer>
 
-
-
-
-
-
-    <!-- <pre id="senate-data"></pre> -->
-
-    <!-- <script src="./js/pro-congress-113-senate.js"></script>
-    <script src="./js/main.js"></script> -->
     <script src="./newtest.js"></script>
 
 
