--- a/senate-party-loyalty.html
+++ b/senate-party-loyalty.html
@@ -29,7 +29,7 @@
 
     <div class="row ">
         <div class="col-md-3 col-sm-6 mb-30px">
-            <img src="./image/capitol-icon.jpg" alt="man with magnifying glass">
+            <img src="./image/capitol-icon.jpg" alt="capitol-icon">
         </div>
         <div class="col-md-9 col-sm-6 align-self-center pull-left">
             <h1 class="main-header">Transparent Government in Fact</h1>
@@ -88,17 +88,9 @@
                 <div class="col-md-6 col-sm-6 mb-30px">
                     <h4>Party Loyalty</h4>
                     <p>
-                        The Constitution specifies that a majority of members constitutes a quorum to do business in
-                        each house. Representatives and senators rarely force the presence of a quorum by demanding
-                        quorum calls; thus, in most cases, debates continue even if a majority is not present.
-                    </p>
-
-                    <p>
-                        The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator
-                        stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for
-                        the most formal matters, as a roll-call of all 435 representatives takes quite some time;
-                        normally, members vote by electronic device. In the case of a tie, the motion in question fails.
-                        In the Senate, the Vice President may (if present) cast the tiebreaking vote.
+                        Those who consider themselves to be strong partisans, strong Democrats and strong Republicans
+                        respectively, tend to be the most faithful in voting for their party's nominee for office and
+                        legislation that backs their party's agenda.
                     </p>
 
                 </div>
@@ -107,7 +99,7 @@
                     <div class="text-aling-right"></div>
                     <h4>Senate at a glance</h4>
 
-                    <table class="table table-bordered table-striped">
+                    <table class="table table-bordered table-striped table-hover">
                         <thead>
                             <tr class="navy-blue">
                                 <th class="column width_1 font-white">Party</th>
@@ -129,7 +121,7 @@
                 <div class="col-md-6 col-sm-6 mb-30px">
                     <h4>Least Loyal (Bottom 10% Party)</h4>
 
-                    <table class="table table-bordered table-striped">
+                    <table class="table table-bordered table-striped table-hover">
                         <thead>
                             <tr class="navy-blue">
                                 <th class="column width_1 font-white">Name</th>
@@ -149,7 +141,7 @@
                 <div class="col-md-6 col-sm-6 mb-30px">
                     <h4>Most Loyal (Top 10% Party)</h4>
 
-                    <table class="table table-bordered table-striped">
+                    <table class="table table-bordered table-striped table-hover">
                         <thead>
                             <tr class="navy-blue">
                                 <th class="column width_1 font-white">Name</th>
@@ -184,10 +176,9 @@
         <div class="footer-copyright text-center py-3"> &copy; 2019 Copyright: All Rights Reserved
         </div>
         <div class="social">
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-linkedin"></a>
-            <a href="#" class="fa fa-google"></a>
+            <a href="https://www.facebook.com/" target="=_blank" class="fa fa-facebook"></a>
+            <a href="https://twitter.com/" target="=_blank" class="fa fa-twitter"></a>
+            <a href="https://www.linkedin.com/" target="=_blank" class="fa fa-linkedin"></a>
         </div>
     </footer>
 
@@ -196,10 +187,7 @@
 
 
 
-    <!-- <script src="./js/pro-congress-113-senate.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="./js/statistics.js"></script>
-    <script src="/Users/christianbaidoo/Desktop/TGIF/js/loyal.js"></script> -->
+
     <script src="./newtest.js"></script>
 
 
