added alt text to the image

--- a/house-data.html
+++ b/house-data.html
@@ -16,7 +16,7 @@
 
     <div class="row ">
         <div class="col-md-3 col-sm-6 mb-30px">
-            <img src="./image/capitol-icon.jpg" alt="man with magnifying glass">
+            <img src="./image/capitol-icon.jpg" alt="capitol-icon">
         </div>
         <div class="col-md-9 col-sm-6 align-self-center background-image">
             <h1 class="main-header">Transparent Government in Fact</h1>
