made the spinner work

--- a/senate-attendance.html
+++ b/senate-attendance.html
@@ -67,7 +67,6 @@
     </nav>
 
     <section class="card">
-        <!-- <div id="loader"></div> -->
 
         <div class="card-body">
             <div id="loader"></div>
@@ -131,9 +130,6 @@
 
                         </tbody>
                     </table>
-
-
-
                 </div>
 
 
@@ -154,14 +150,8 @@
 
                         </tbody>
                     </table>
-
-
-
                 </div>
-
-
             </div>
-
         </div>
     </section>
 
@@ -173,7 +163,7 @@
 
 
     <footer class="page-footer font-small blue">
-        <div class="footer-copyright text-center py-3"> &copy; 2019 Copyright: All Rights Reserved
+        <div class="footer-copyright text-center py-3"> &copy; 2020 Copyright: All Rights Reserved
         </div>
         <div class="social">
             <a href="https://www.facebook.com/" target="=_blank" class="fa fa-facebook"></a>
@@ -185,9 +175,8 @@
 
 
 
-    <!-- <script src="./js/pro-congress-113-senate.js"></script>
-    <script src="./js/main.js"></script> -->
-    <script src="./newtest.js"></script>
+
+    <script src="./js/main.js"></script>
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
