--- a/senate-party-loyalty.html
+++ b/senate-party-loyalty.html
@@ -71,6 +71,8 @@
 
     <section class="card">
         <div class="card-body">
+            <div id="loader"></div>
+
 
             <div class="row ">
                 <div class="col-md-6 col-sm-6 mb-30px">
@@ -144,9 +146,11 @@
             </div>
 
         </div>
-        <div id="loader"></div>
-
     </section>
+
+
+
+
 
     <br>
 
@@ -158,7 +162,7 @@
 
 
     <footer class="page-footer font-small blue">
-        <div class="footer-copyright text-center py-3"> &copy; 2019 Copyright: All Rights Reserved
+        <div class="footer-copyright text-center py-3"> &copy; 2020 Copyright: All Rights Reserved
         </div>
         <div class="social">
             <a href="https://www.facebook.com/" target="=_blank" class="fa fa-facebook"></a>
@@ -173,8 +177,7 @@
 
 
 
-    <script src="./newtest.js"></script>
-
+    <script src="./js/main.js"></script>
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
