--- a/house-attendance.html
+++ b/house-attendance.html
@@ -72,12 +72,13 @@
 
 
         <div class="card-body">
+            <div id="loader"></div>
+
 
             <div class="row ">
 
                 <div class="col-md-6 col-sm-6 mb-30px">
 
-                    <div id="loader"></div>
 
                     <h4>Attendance</h4>
                     <p>
@@ -163,7 +164,6 @@
 
         </div>
 
-        <!-- <div id="loader"></div> -->
 
     </section>
 
@@ -174,7 +174,7 @@
 
 
     <footer class="page-footer font-small blue">
-        <div class="footer-copyright text-center py-3"> &copy; 2019 Copyright: All Rights Reserved
+        <div class="footer-copyright text-center py-3"> &copy; 2020 Copyright: All Rights Reserved
         </div>
         <div class="social">
             <a href="https://www.facebook.com/" target="=_blank" class="fa fa-facebook"></a>
@@ -188,11 +188,9 @@
 
 
 
-    <!-- <pre id="senate-data"></pre> -->
 
 
-    <script src="./newtest.js"></script>
-
+    <script src="./js/main.js"></script>
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
