--- a/house-data.html
+++ b/house-data.html
@@ -66,67 +66,76 @@
         </div>
     </nav>
 
-    <div class="jumbotron">
-        <h2>Congressmen</h2>
-        <p class="card-text">
-            The major power of the House is to pass federal legislation that affects the entire country, although
-            its bills must also be passed by the Senate and further agreed to by the U.S. President before becoming
-            law (unless both the House and Senate re-pass the legislation with a two-thirds majority in each
-            chamber). The House has some exclusive powers: the power to initiate revenue bills, to impeach officials
-            (impeached officials are subsequently tried in the Senate), and to elect the U.S. President in case
-            there is no majority in the Electoral College.
-        </p>
-        <p>
-            Each U.S. state is represented in the House in proportion to its population as measured in the census,
-            but every state is entitled to at least one representative.
-        </p>
+    <section class="card">
+        <div class="card-body">
+            <div id="loader"></div>
 
-    </div>
+            <div class="jumbotron">
+                <h2>Congressmen</h2>
+                <p class="card-text">
+                    The major power of the House is to pass federal legislation that affects the entire country,
+                    although
+                    its bills must also be passed by the Senate and further agreed to by the U.S. President before
+                    becoming
+                    law (unless both the House and Senate re-pass the legislation with a two-thirds majority in each
+                    chamber). The House has some exclusive powers: the power to initiate revenue bills, to impeach
+                    officials
+                    (impeached officials are subsequently tried in the Senate), and to elect the U.S. President in case
+                    there is no majority in the Electoral College.
+                </p>
+                <p>
+                    Each U.S. state is represented in the House in proportion to its population as measured in the
+                    census,
+                    but every state is entitled to at least one representative.
+                </p>
 
-
-    <form class="checkbox">
-        <span class="font-italic">Filter by:</span> &ensp;
-
-        <input type="checkbox" id="republican" class="checkbox">
-        <label for="republican">Republican</label>
-        <input type="checkbox" id="democrat">
-        <label for="democrat">Democrat</label>
-        <input type="checkbox" id="independent">
-        <label for="independent">Independent</label>
-    </form>
+            </div>
 
 
-    <div class="table-wrapper-scroll-y my-custom-scrollbar">
+            <form class="checkbox">
+                <span class="font-italic">Filter by:</span> &ensp;
 
-        <table class="table table-bordered table-striped table-hover">
+                <input type="checkbox" id="republican" class="checkbox">
+                <label for="republican">Republican</label>
+                <input type="checkbox" id="democrat">
+                <label for="democrat">Democrat</label>
+                <input type="checkbox" id="independent">
+                <label for="independent">Independent</label>
+            </form>
 
 
-            <tr>
-                <th class="font-white fixed navy-blue">Senator</th>
-                <th class="font-white fixed navy-blue">Party
-                <th class="font-white fixed navy-blue">
-                    State
-                    <div>
-                        <select name="Filter by state" id="select-filter">
-                            <option value="all">All</option>
-                        </select>
-                    </div>
-                </th>
-                <th class="font-white fixed navy-blue">Years in Office</th>
-                <th class="font-white fixed navy-blue">Percentage of Votes</th>
-            </tr>
-            <tbody id="tabledata">
+            <div class="table-wrapper-scroll-y my-custom-scrollbar">
 
-            </tbody>
-        </table>
-    </div>
+                <table class="table table-bordered table-striped table-hover">
 
-    <div id="loader"></div>
+
+                    <tr>
+                        <th class="font-white fixed navy-blue">Senator</th>
+                        <th class="font-white fixed navy-blue">Party
+                        <th class="font-white fixed navy-blue">
+                            State
+                            <div>
+                                <select name="Filter by state" id="select-filter">
+                                    <option value="all">All</option>
+                                </select>
+                            </div>
+                        </th>
+                        <th class="font-white fixed navy-blue">Years in Office</th>
+                        <th class="font-white fixed navy-blue">Percentage of Votes</th>
+                    </tr>
+                    <tbody id="tabledata">
+
+                    </tbody>
+                </table>
+            </div>
+
+        </div>
+    </section>
 
 
 
     <footer class="page-footer font-small blue">
-        <div class="footer-copyright text-center py-3"> &copy; 2019 Copyright: All Rights Reserved
+        <div class="footer-copyright text-center py-3"> &copy; 2020 Copyright: All Rights Reserved
         </div>
         <div class="social">
             <a href="https://www.facebook.com/" target="=_blank" class="fa fa-facebook"></a>
@@ -139,12 +148,8 @@
 
 
 
+    <script src="./js/main.js"></script>
 
-    <!-- <pre id="senate-data"></pre> -->
-
-    <!-- <script src="./js/pro-congress-113-house.js"></script>
-    <script src="./js/main.js"></script> -->
-    <script src="/Users/christianbaidoo/Desktop/TGIF/newtest.js"></script>
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
