--- a/house-party-loyalty.html
+++ b/house-party-loyalty.html
@@ -73,6 +73,8 @@
 
     <section class="card">
         <div class="card-body">
+            <div id="loader"></div>
+
 
             <div class="row ">
                 <div class="col-md-6 col-sm-6 mb-30px">
@@ -153,7 +155,6 @@
             </div>
 
         </div>
-        <div id="loader"></div>
 
     </section>
 
@@ -168,7 +169,7 @@
 
 
     <footer class="page-footer font-small blue">
-        <div class="footer-copyright text-center py-3"> &copy; 2019 Copyright: All Rights Reserved
+        <div class="footer-copyright text-center py-3"> &copy; 2020 Copyright: All Rights Reserved
         </div>
         <div class="social">
             <a href="https://www.facebook.com/" target="=_blank" class="fa fa-facebook"></a>
@@ -184,7 +185,7 @@
 
 
 
-    <script src="./newtest.js"></script>
+    <script src="./js/main.js"></script>
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
